--- a/3-Data Structures/3.3_Dictionaries.ipynb
+++ b/3-Data Structures/3.3_Dictionaries.ipynb
@@ -379,13 +379,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0e16124",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'s1': {'name': 'ujjwal', 'age': 20}, 's2': {'name': 'kaushal', 'age': 21}}\n"
+     ]
+    }
+   ],
    "source": [
-    "#Nested Dictionaries\n"
+    "#Nested Dictionaries\n",
+    "students = {\n",
+    "    \"s1\":{\"name\":\"ujjwal\",\"age\":20},\n",
+    "    \"s2\":{\"name\":\"kaushal\",\"age\":21}\n",
+    "}\n",
+    "print(students)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "01fe8d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ujjwal\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students[\"s1\"][\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "05984fcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s1:{'name': 'ujjwal', 'age': 20}\n",
+      "name:ujjwal\n",
+      "age:20\n",
+      "s2:{'name': 'kaushal', 'age': 21}\n",
+      "name:kaushal\n",
+      "age:21\n"
+     ]
+    }
+   ],
+   "source": [
+    "for id,val in students.items(): \n",
+    "    print(f\"{id}:{val}\")\n",
+    "    for key,va in val.items():\n",
+    "        print(f\"{key}:{va}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "138ac56e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sq = {x : x**2 for x in range(5)}\n",
+    "print(sq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "03deae1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "evens = {x:x**2 for x in range(10) if x % 2 == 0}\n",
+    "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "801d8a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 3, 3: 2, 4: 2, 5: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [1,2,2,2,3,4,4,5,3]\n",
+    "freq = {}\n",
+    "\n",
+    "for i in num:\n",
+    "    if i in freq:\n",
+    "        freq[i] += 1\n",
+    "    else:\n",
+    "        freq[i] = 1\n",
+    "\n",
+    "print(freq)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "43649944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 1, 'd': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {\"a\":1,\"b\":2}\n",
+    "d2 = {\"c\":1,\"d\":1}\n",
+    "df = {**d1,**d2}\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "930acd07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
