--- a/4-Functions in Python/4.4_Filterfunctions.ipynb
+++ b/4-Functions in Python/4.4_Filterfunctions.ipynb
@@ -3,45 +3,45 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76c43816",
+   "id": "3020a0f7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.<lambda>(arguments)>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lambda arguments : expression"
+    "def even(num):\n",
+    "    return num % 2 == 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1a9b2297",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def addition(a, b):\n",
-    "    return a+b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0c6d31eb",
+   "id": "b3273ca4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "17f1d502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12]"
       ]
      },
      "execution_count": 3,
@@ -50,137 +50,91 @@
     }
    ],
    "source": [
-    "addition(2, 3)"
+    "lst = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+    "list(filter(even,lst))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3625bbb",
+   "id": "beb666c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "add = lambda a,b : a + b\n",
-    "print(add(2,5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "93afbf14",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "eve = lambda nun : nun % 2 == 0\n",
-    "print(eve(2))"
+    "gthan5 = list(filter(lambda x : x>5,lst))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "02cf494e",
+   "id": "b7c07cf4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "39"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8, 9, 10, 11, 12]\n"
+     ]
     }
    ],
    "source": [
-    "def addition(x, y, z):\n",
-    "    return x + y + z\n",
-    "\n",
-    "addition(12, 13, 14)"
+    "print(gthan5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed21de0e",
+   "id": "d12a89d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "[6, 8, 10, 12]\n"
      ]
     }
    ],
    "source": [
-    "add1 = lambda a,b,c : a + b + c\n",
-    "print(add1(1,2,3))"
+    "doublecondition = list(filter(lambda x : x>5 and x % 2 == 0, lst))\n",
+    "print(doublecondition)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b073e9d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40000\n"
-     ]
-    }
-   ],
-   "source": [
-    "numbers = [1,2,3,4,5,6]\n",
-    "def square(number):\n",
-    "    return number**2\n",
-    "\n",
-    "print(square(200))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "04e08a46",
+   "execution_count": 12,
+   "id": "93b084ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 4, 9, 16, 25, 36]"
+       "[{'name': 'kaushal', 'age': 23}, {'name': 'john', 'age': 24}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(map(lambda x : x ** 2, numbers))"
+    "people = [\n",
+    "    {'name' : 'ujjwal', 'age' : 21},\n",
+    "    {'name' : 'kaushal', 'age' : 23},\n",
+    "    {'name' : 'john', 'age' : 24},\n",
+    "]\n",
+    "\n",
+    "def age_greater_than_22(person):\n",
+    "    return person['age'] > 22\n",
+    "\n",
+    "list(filter(age_greater_than_22, people))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55129296",
+   "id": "69a67fb9",
    "metadata": {},
    "outputs": [],
    "source": []
