--- a/8-OOPS/8.2_Inheritance.ipynb
+++ b/8-OOPS/8.2_Inheritance.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8ca2e308",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected '(' (66727313.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdef Car:\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m expected '('\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The person will drive the Petrol car.\n",
+      "None\n"
      ]
     }
    ],
@@ -31,8 +31,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9e7de671",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla supports self driving: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Tesla(Car):\n",
+    "    def __init__(self, windows, door, enginetype, is_selfdriving):\n",
+    "        super().__init__(windows, door, enginetype)\n",
+    "        self.is_selfdriving=is_selfdriving\n",
+    "        \n",
+    "    def selfdriving(self):\n",
+    "        print(f\"Tesla supports self driving: {self.is_selfdriving}\")\n",
+    "        \n",
+    "t1 = Tesla(4, 5, \"electric\", True)\n",
+    "t1.selfdriving()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "93d9b612",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buddy speaks woof\n",
+      "Owner: JACK\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Multiple Inheritance:\n",
+    "\n",
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name=name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        print(\"Subclass must implement this method\")\n",
+    "\n",
+    "class Pet:\n",
+    "    def __init__(self, owner):\n",
+    "        self.owner=owner\n",
+    "        \n",
+    "class Dog(Animal, Pet):\n",
+    "    def __init__(self, name, owner):\n",
+    "        Animal.__init__(self, name)\n",
+    "        Pet.__init__(self, owner)\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} speaks woof\"\n",
+    "    \n",
+    "dog1 = Dog(\"Buddy\",\"JACK\")\n",
+    "print(dog1.speak())\n",
+    "print(f\"Owner: {dog1.owner}\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cfdd58a",
    "metadata": {},
    "outputs": [],
    "source": []
