--- a/8-OOPS/8.3_Polymorphism.ipynb
+++ b/8-OOPS/8.3_Polymorphism.ipynb
@@ -56,14 +56,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'abtractmethod' from 'abc' (c:\\Users\\ujjwa\\OneDrive\\Desktop\\Python\\venv\\Lib\\abc.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mabc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ABC, abtractmethod\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mVehicle\u001b[39;00m(ABC):\n\u001b[32m      4\u001b[39m     \u001b[38;5;129m@abstractmethod\u001b[39m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstart_engine\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'abtractmethod' from 'abc' (c:\\Users\\ujjwa\\OneDrive\\Desktop\\Python\\venv\\Lib\\abc.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vehicle engine started\n"
      ]
     }
    ],
@@ -89,7 +85,8 @@
     "    print(vehicle.start_engine())\n",
     "    \n",
     "car = Car()\n",
-    "motorcycle = Motorcycle()"
+    "motorcycle = Motorcycle()\n",
+    "start_vehicle(car)\n"
    ]
   },
   {
