--- a/8-OOPS/8.4_Encapsulation.ipynb
+++ b/8-OOPS/8.4_Encapsulation.ipynb
@@ -146,20 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6fc80b7c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "descriptor '__init__' requires a 'super' object but received a 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, age, gender):\n\u001b[32m      9\u001b[39m         \u001b[38;5;28msuper\u001b[39m.\u001b[34m__init__\u001b[39m(name, age, gender)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m employee = \u001b[43mEmployee\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mUjjwal\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m21\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMale\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(employee._name)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mEmployee.__init__\u001b[39m\u001b[34m(self, name, age, gender)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, age, gender):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgender\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: descriptor '__init__' requires a 'super' object but received a 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ujjwal\n"
      ]
     }
    ],
@@ -180,8 +175,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5b863e0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kaushal'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Encapsulation with getter and setter\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.__name = name\n",
+    "        self.__age = age\n",
+    "        \n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "    \n",
+    "    def set_name(self, name):\n",
+    "        self.__name = name\n",
+    "        \n",
+    "person = Person(\"Ujjwal\", 21)\n",
+    "person.get_name()\n",
+    "person.set_name(\"Kaushal\")\n",
+    "person.get_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4bd739",
    "metadata": {},
    "outputs": [],
    "source": []
