--- a/8-OOPS/8.6_MagicMethods.ipynb
+++ b/8-OOPS/8.6_MagicMethods.ipynb
@@ -2,17 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e92b61ba",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<string>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mFile \u001b[39m\u001b[32m<string>:4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mperson = Person()\u001b[39m\n                     ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unindent does not match any outer indentation level\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -25,11 +53,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e7b6bbc9",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UJJWAL, 21 years old!\n",
+      "Person (name: UJJWAL, age = 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name}, {self.age} years old!\"\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Person (name: {self.name}, age = {self.age})\"\n",
+    "    \n",
+    "person = Person(\"UJJWAL\", 21)\n",
+    "print(person)\n",
+    "print(repr(person))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d50df9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "  "
+   ]
   }
  ],
  "metadata": {
