--- a/10-NLP/10.2_Stemming.ipynb
+++ b/10-NLP/10.2_Stemming.ipynb
@@ -174,29 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "ac6c3df9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('fair', 'sport')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snowballsstemmer.stem(\"fairly\"), snowballsstemmer.stem(\"sportingly\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd5cb36b",
    "metadata": {},
    "outputs": [
     {
@@ -206,12 +185,14 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msnowballsstemmer\u001b[49m.stem(\u001b[33m\"\u001b[39m\u001b[33msportingly\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msnowballsstemmer\u001b[49m.stem(\u001b[33m\"\u001b[39m\u001b[33mfairly\u001b[39m\u001b[33m\"\u001b[39m), snowballsstemmer.stem(\u001b[33m\"\u001b[39m\u001b[33msportingly\u001b[39m\u001b[33m\"\u001b[39m)\n",
       "\u001b[31mNameError\u001b[39m: name 'snowballsstemmer' is not defined"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "snowballsstemmer.stem(\"fairly\"), snowballsstemmer.stem(\"sportingly\")"
+   ]
   }
  ],
  "metadata": {
