--- a/10-NLP/10.3_Lemmatisation.ipynb
+++ b/10-NLP/10.3_Lemmatisation.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b3ba6071",
    "metadata": {},
    "outputs": [
@@ -109,12 +109,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eating----->eating\n",
-      "eats----->eats\n",
-      "eaten----->eaten\n",
-      "writing----->writing\n",
-      "writes----->writes\n",
-      "programming----->programming\n",
+      "eating----->eat\n",
+      "eats----->eat\n",
+      "eaten----->eat\n",
+      "writing----->write\n",
+      "writes----->write\n",
+      "programming----->program\n",
       "programs----->program\n",
       "finally----->finally\n",
       "finalize----->finalize\n",
